parslers-benchmark/src/tests/invalid/syntaxErr/if/ifNothen.wacc
# if missing then clause

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  if true 
  else
    skip
  fi
end

